--- a/index.html
+++ b/index.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="work-sans-font">
-    <header>
-        <nav>
-            <h3></h3>
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link light-gray ">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link light-gray ">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link light-gray ">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link light-gray ">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New 
+                    Group of Architects 
+                    </h1>
+                <p class="banner-subtitle gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum fugit tempore numquam harum! Saepe
+                    obcaecati necessitatibus assumenda! At, perspiciatis enim!</p>
+                    <button class="btn-explo">Explore More</button>
+            </div>
+            <img class="banner-img" src="images/banner.png" alt="">
+
+        </div>
 
     </header>
     <main>
+        <section class="teams">
+            <div class="team-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+            <div class="team-features">
+                <h3 class="feature-title"><span id="Quick-list" class="gray"> Quick list </span>of Our<span id="Features"> Features</span></h3>
+                <p class="feature-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-explo">Explore more</button>
+            </div>
+        </section>
 
     </main>
     <footer>
@@ -22,4 +56,5 @@
 
     </footer>
 </body>
+
 </html>
